# mousefinder

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  develop.yml  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  features.yml  question.yml
.github/workflows/: linting.yml  typing.yml
src/mousefinder/: __init__.py  configurations.py  detectors.py  formats.py  models.py  readers.py  rois.py  writers.py
src/mousefinder/core/: mixins.py  resources.py  typings.py
