[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mousefinder"
version = "1.0.0"
description = """
Positional tracking software for mice
"""
readme = "README.md"
authors =[{ name="Matthew Caudill", email="mscaudill@gmail.com" }]
license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
keywords = [
    "machine-vision",
    "tracking",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "matplotlib",
    "ipython",
    "notebook",
    "psutil",
    "ffmpeg",
    "av",
    "psutil",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pylint",
    "isort",
    "codespell",
    "black",
    "bumpver",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
    "pip-tools",
    "build",
    "twine",
    "types-psutil",
    "scipy-stubs",
]
linting = ["codespell", "isort", "pylint", "black"]
typing = ["mypy"]
testing = ["pytest"]

[project.urls]
Homepage = "https://github.com/mscaudill/mousefinder"

# inform setuptools where to find submodules, project typing and additional data
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
"flyfinder" = ["py.typed"]

# bumpver configuration
[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = 'bump version {old_version} -> {new_version}'
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"src/flyfinder/__init__.py" = ['__version__ = "{version}"']


# mypy configuration
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = ['sandbox/.*']

[[tool.mypy.overrides]]
# 3rd party's without annotations
ignore_missing_imports = true

[tool.pylint.design]
max-attributes = 20
max-args = 10
max-locals = 30

[tool.pylint.basic]
argument-naming-style = "any"
variable-naming-style = "any"
attr-naming-style = "any"

[tool.pylint.main]
load-plugins = "pylint.extensions.typing"
ignore-paths = ["^(.*/|)sandbox/"]

[tool.pylint.messages_control]
disable = ["ungrouped-imports"]

[tool.isort]
profile = 'black'
line_length = 80

[tool.codespell]
skip = '*.txt,*.ipynb, tests, *.egg-info'
before-context = 3
after-context = 3
quiet-level = 3

[tool.black]
line-length = 80
skip-string-normalization = true
